--- a/orcamento25.html
+++ b/orcamento25.html
@@ -91,7 +91,7 @@
 <body>
     <div id="header">OE 2025 | MOTOR DE BUSCA CNN PORTUGAL</div>
     <div id="link">pode ver <a href="https://gogapo.github.io/cnn/relatorio_OE.pdf" target="_blank">AQUI</a> o documento na íntegra</div>
-    <input type="text" id="wordInput" placeholder="escreva aqui" />
+    <input type="text" id="wordInput" placeholder="escreva aqui a palavra que quer pesquisar" />
     <button id="searchButton">pesquisar</button>
     <div id="loading">!!!MOTOR DE BUSCA A CARREGAR!!! Comece a pesquisar só depois de esta mensagem desaparecer</div>
     <div id="output"></div>
