--- a/iframeOE.html
+++ b/iframeOE.html
@@ -13,7 +13,7 @@
         }
         iframe {
             width: 100%;
-            height: 10000; /* Altura do iframe */
+            height: 10000px; /* Altura do iframe */
             border: none; /* Remove a borda padrão do iframe */
         }
     </style>
