--- a/orcamento25.html
+++ b/orcamento25.html
@@ -116,6 +116,7 @@
         }).then(() => {
             isLoading = false; // Set loading to false when done
             document.getElementById('loading').textContent = 'pode começar a pesquisar'; // Update loading message
+            adjustIframeHeight(); // Adjust iframe height after loading
         }).catch(function(error) {
             console.error('Error loading PDF:', error);
             document.getElementById('loading').textContent = 'Erro ao carregar o PDF.';
@@ -165,6 +166,8 @@
             } else {
                 document.getElementById('output').innerHTML = '<p>Por favor, insira uma palavra para pesquisar</p>';
             }
+
+            adjustIframeHeight(); // Adjust iframe height after search
         }
 
         // Find occurrences of the word in the text
@@ -207,55 +210,62 @@
                 output.innerHTML += `<div class="result">${sentenceHtml} (<i>Página ${result.page} do OE 2025</i>) ${contextButton}</div>`;
             });
 
-            // Create pagination buttons
-            createPaginationButtons(totalPages);
-        }
-
-        // Create pagination buttons
-        function createPaginationButtons(totalPages) {
-            const pagination = document.getElementById('pagination');
+            // Add pagination
             for (let i = 1; i <= totalPages; i++) {
-                const button = document.createElement('button');
-                button.textContent = i;
-                button.className = (i === currentPage) ? 'active' : '';
-                button.addEventListener('click', function() {
+                const pageButton = document.createElement('button');
+                pageButton.textContent = i;
+                pageButton.className = currentPage === i ? 'active' : '';
+                pageButton.onclick = function() {
                     currentPage = i; // Update current page
-                    performSearch(); // Re-perform search to update displayed results
-                    window.scrollTo(0, 0); // Scroll to the top of the iframe
-                    window.parent.scrollTo(0, 0); // Scroll to the top of the parent window
-                });
-                pagination.appendChild(button);
+                    displayResults(results, word); // Redisplay results for the new page
+                };
+                pagination.appendChild(pageButton);
             }
 
-            // Create Previous button
+            // Add next/previous buttons
             const prevButton = document.createElement('button');
             prevButton.textContent = 'Anterior';
-            prevButton.disabled = currentPage === 1; // Disable if on first page
-            prevButton.addEventListener('click', function() {
+            prevButton.disabled = currentPage === 1;
+            prevButton.onclick = function() {
                 if (currentPage > 1) {
                     currentPage--;
-                    performSearch();
+                    displayResults(results, word); // Redisplay results for the new page
                 }
-            });
-            pagination.prepend(prevButton); // Add to the beginning of the pagination
+            };
+            pagination.prepend(prevButton); // Add to the beginning
 
-            // Create Next button
             const nextButton = document.createElement('button');
             nextButton.textContent = 'Próximo';
-            nextButton.disabled = currentPage === totalPages; // Disable if on last page
-            nextButton.addEventListener('click', function() {
+            nextButton.disabled = currentPage === totalPages;
+            nextButton.onclick = function() {
                 if (currentPage < totalPages) {
                     currentPage++;
-                    performSearch();
+                    displayResults(results, word); // Redisplay results for the new page
                 }
-            });
-            pagination.appendChild(nextButton); // Add to the end of the pagination
+            };
+            pagination.appendChild(nextButton); // Add to the end
         }
 
-        // Show context for a found sentence (optional feature)
+        // Show context for the selected sentence
         function showContext(sentence) {
-            alert('Contexto: ' + sentence); // Simple alert for context
+            alert('Contexto: ' + sentence);
         }
+
+        // Function to adjust the height of the iframe
+        function adjustIframeHeight() {
+            const body = document.body;
+            const html = document.documentElement;
+
+            // Calculate the total height of the content
+            const height = Math.max(body.scrollHeight, body.offsetHeight,
+                                     html.clientHeight, html.scrollHeight, html.offsetHeight);
+
+            // Send the height to the parent page
+            window.parent.postMessage(height, '*');
+        }
+
+        // Call adjustIframeHeight when the page loads or results change
+        window.onload = adjustIframeHeight;
     </script>
 </body>
 </html>
