--- a/iframeOE.html
+++ b/iframeOE.html
@@ -1,38 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minha Página com Iframe</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f5f5; /* Fundo claro para a página */
-        }
-        iframe {
-            width: 100%;
-            border: none; /* Remove a borda padrão do iframe */
-            transition: height 0.3s; /* Transição suave ao ajustar a altura */
-        }
-    </style>
-</head>
-<body>
-
-    <iframe id="pdfFinder" src="https://gogapo.github.io/cnn/orcamento25.html" title="PDF Word Finder"></iframe> <!-- Substitua URL_DO_SEU_HTML pela URL do arquivo HTML acima -->
-    
-    <script>
-        const iframe = document.getElementById('pdfFinder');
-
-        // Ajusta a altura do iframe com base na mensagem recebida
-        window.addEventListener('message', function(event) {
-            // Verifica se a mensagem é um número
-            const height = parseInt(event.data, 10);
-            if (!isNaN(height)) {
-                iframe.style.height = height + 'px'; // Ajusta a altura do iframe
-            }
-        });
-    </script>
-</body>
-</html>
+<p><iframe frameborder="0" height="600px" src="https://gogapo.github.io/cnn/orcamento25.html" width="100%"></iframe></p>
