--- a/iframeOE.html
+++ b/iframeOE.html
@@ -1,1 +1,18 @@
-<p><iframe frameborder="0" height="1500px" src="https://gogapo.github.io/cnn/orcamento25.html" width="100%"></iframe></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PDF Word Finder Iframe</title>
+    <style>
+        /* Estilo para o iframe */
+        #myIframe {
+            width: 100%;
+            border: none; /* Sem borda */
+        }
+    </style>
+</head>
+<body>
+    <iframe id="myIframe" src="https://gogapo.github.io/cnn/orcamento25.html" scrolling="no"></iframe>
+</body>
+</html>
