--- a/iframeOE.html
+++ b/iframeOE.html
@@ -9,10 +9,21 @@
         #myIframe {
             width: 100%;
             border: none; /* Sem borda */
+            height: 100vh; /* Altura inicial do iframe */
         }
     </style>
 </head>
 <body>
     <iframe id="myIframe" src="https://gogapo.github.io/cnn/orcamento25.html" scrolling="no"></iframe>
+
+    <script>
+        const iframe = document.getElementById('myIframe');
+
+        // Ajustar altura do iframe baseado na altura do documento carregado
+        iframe.onload = function() {
+            const body = iframe.contentWindow.document.body;
+            iframe.style.height = body.scrollHeight + 'px'; // Ajustar altura do iframe
+        };
+    </script>
 </body>
 </html>
