--- a/iframeOE.html
+++ b/iframeOE.html
@@ -10,7 +10,7 @@
             width: 100%;
             border: none; /* Sem borda */
             height: 600px; /* Altura fixa ou máxima */
-            overflow: auto; /* Habilitar rolagem se necessário */
+            overflow: hidden; /* Habilitar rolagem se necessário */
         }
     </style>
 </head>
