--- a/iframeOE.html
+++ b/iframeOE.html
@@ -9,13 +9,13 @@
         #myIframe {
             width: 100%;
             border: none; /* Sem borda */
-            height: 600px; /* Altura fixa ou máxima */
-            overflow: hidden; /* Habilitar rolagem se necessário */
+            height: 600px; /* Altura fixa ou máxima inicial */
+            overflow: hidden; /* Sem rolagem no iframe */
         }
     </style>
 </head>
 <body>
-    <iframe id="myIframe" src="https://gogapo.github.io/cnn/orcamento25.html" scrolling="yes"></iframe>
+    <iframe id="myIframe" src="https://gogapo.github.io/cnn/orcamento25.html"></iframe>
 
     <script>
         const iframe = document.getElementById('myIframe');
