--- a/orcamento25.html
+++ b/orcamento25.html
@@ -67,18 +67,18 @@
             margin-top: 20px;
         }
         #backToTop {
-            display: none; /* Ocultar inicialmente */
-            padding: 10px 15px;
-            border: none;
-            border-radius: 5px;
-            background-color: #28a745; /* Verde para o botão */
-            color: white; /* Texto branco */
-            cursor: pointer;
-            margin-top: 10px;
-        }
-        #backToTop:hover {
-            background-color: #218838; /* Verde mais escuro no hover */
-        }
+    display: none; /* Ocultar inicialmente */
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    background-color: #007bff; /* Azul para o botão, igual ao botão "Pesquisar" */
+    color: white; /* Texto branco */
+    cursor: pointer;
+    margin-top: 10px;
+}
+#backToTop:hover {
+    background-color: #0056b3; /* Azul mais escuro no hover, igual ao botão "Pesquisar" */
+}
     </style>
 </head>
 <body>
