--- a/orcamento25.html
+++ b/orcamento25.html
@@ -67,18 +67,18 @@
             margin-top: 20px;
         }
         #backToTop {
-            display: none; /* Ocultar inicialmente */
-            padding: 10px 15px;
-            border: none;
-            border-radius: 5px;
-            background-color: #007bff; /* Azul para o botão, igual ao botão "Pesquisar" */
-            color: white; /* Texto branco */
-            cursor: pointer;
-            margin-top: 10px;
-        }
-        #backToTop:hover {
-            background-color: #0056b3; /* Azul mais escuro no hover, igual ao botão "Pesquisar" */
-        }
+    display: none; /* Ocultar inicialmente */
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    background-color: #007bff; /* Azul para o botão, igual ao botão "Pesquisar" */
+    color: white; /* Texto branco */
+    cursor: pointer;
+    margin-top: 10px;
+}
+#backToTop:hover {
+    background-color: #0056b3; /* Azul mais escuro no hover, igual ao botão "Pesquisar" */
+}
     </style>
 </head>
 <body>
@@ -199,19 +199,40 @@
             document.getElementById('backToTop').style.display = 'block'; // Mostrar o botão "voltar ao início"
         }
 
-        // Show context for the selected sentence
+        // Show the context of the sentence
         function showContext(sentence, pageIndex) {
-            const contextStart = Math.max(0, pageIndex - 1); // Get the start index for context
-            const contextEnd = Math.min(pageSentences[pageIndex].length - 1, pageIndex + 1); // Get the end index for context
-            const context = pageSentences[pageIndex].slice(contextStart, contextEnd + 1).join(' '); // Join context sentences
-            alert(`Contexto:\n${context}`); // Show context in an alert
+            const context = getContext(sentence, pageIndex);
+            alert(context); // Show the context in an alert box
         }
 
-        // Scroll to the top of the page
+        // Get context (previous and next sentences)
+        function getContext(sentence, pageIndex) {
+            const sentences = pageSentences[pageIndex];
+            const sentenceIndex = findSentenceIndex(pageIndex, sentence);
+            let context = '';
+
+            if (sentenceIndex > 0) {
+                context += `${sentences[sentenceIndex - 1].trim()} `; // Previous sentence
+            }
+
+            context += `${sentences[sentenceIndex].trim()}`; // Current sentence
+
+            if (sentenceIndex < sentences.length - 1) {
+                context += ` ${sentences[sentenceIndex + 1].trim()}`; // Next sentence
+            }
+
+            return context;
+        }
+
+        // Find the index of a sentence within a page
+        function findSentenceIndex(pageIndex, sentence) {
+            const sentences = pageSentences[pageIndex];
+            return sentences.findIndex(s => s.trim() === sentence.trim());
+        }
+
+        // Scroll to the top (anchor)
         function scrollToTop() {
-            setTimeout(() => {
-                document.getElementById('topAnchor').scrollIntoView({ behavior: 'smooth' });
-            }, 100); // Ajuste o tempo conforme necessário
+            document.getElementById('topAnchor').scrollIntoView({ behavior: 'smooth' });
         }
     </script>
 </body>
