--- a/orcamento25.html
+++ b/orcamento25.html
@@ -15,6 +15,7 @@
             font-size: 15px;
             margin-bottom: 5px;
             font-weight: bold;
+            color:#0076CE;
         }
         #link {
             font-size: 10px;
